Abhiruchi First commit

--- a/AbhiruchiWebsite/templates/AbhiruchiWebsite/body1.html
+++ b/AbhiruchiWebsite/templates/AbhiruchiWebsite/body1.html
@@ -84,7 +84,7 @@
       <p>స్నాక్స్</p>
     </div>
     <div class="food-card">
-      <img src="{% static 'AbhiruchiWebsite/images/sweets.jpg' %}" alt="Indian Sweets">
+      <img src="{% static 'AbhiruchiWebsite/images/sweets.jpeg' %}" alt="Indian Sweets">
       <p>స్వీట్స్</p>
     </div>
     <div class="food-card">
